[add] Making the classifier with ASL model training

--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "@mediapipe/hands": "^0.4.1635986972",
     "@tensorflow-models/handpose": "0.0.6",
     "@tensorflow/tfjs": "^2.4.0",
-    "@testing-library/jest-dom": "^4.2.4",
+    "@tensorflow/tfjs-node": "^3.11.0",
+    "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "fingerpose": "0.0.2",
+    "node-pre-gyp": "^0.17.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.3",
     "react-webcam": "^5.2.0"
   },
   "scripts": {
